--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "fuse.js": "^6.4.4",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "node-webvtt": "^1.9.3",
     "plyr": "^3.6.2",
     "quill": "^1.3.7",
