--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "Video", "src/App/Video/Media/View-from-a-blue-moon/videoStructure.ts"]
+  "include": ["src", "Video", "src/App/Video/Media/View-from-a-blue-moon/videoStructure.ts", "public/PlyrSprite"]
 }
