--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
+.env.production
 .env.test.local
 .env.production.local
 
@@ -18,4 +20,4 @@ yarn-error.log*
 /public
 /.cache
 
-src/Media
+
