--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.2.1",
@@ -29,6 +29,7 @@
     "dayjs": "^1.10.3",
     "fuse.js": "^6.4.4",
     "gatsby": "latest",
+    "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-material-ui": "latest",
     "gatsby-plugin-react-helmet": "latest",
     "gatsby-plugin-styled-components": "^3.10.0",
