--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby",
-  "version": "2.0.7",
+  "name": "learning-system",
+  "version": "2.0.8",
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.2.1",
@@ -12,10 +12,8 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "latest",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@reach/router": "^1.3.4",
     "@testing-library/user-event": "^12.5.0",
-    "@types/jest": "^26.0.19",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.19.7",
     "@types/react": "^16.14.2",
@@ -32,7 +30,7 @@
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-material-ui": "latest",
     "gatsby-plugin-react-helmet": "latest",
-    "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-plugin-styled-components": "^4.3.0",
     "lodash.debounce": "^4.0.8",
     "plyr": "^3.6.2",
     "react": "latest",
@@ -47,10 +45,24 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
+    "start": "gatsby serve -p $PORT",
+    "start:ci": "gatsby serve",
+    "test": "jest --ci",
+    "cypress:open": "cypress open",
+    "cypress": "cypress run",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.0"
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.12.1",
+    "cypress": "^7.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
