--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-system",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^4.2.1",
@@ -62,6 +62,11 @@
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.12.1",
     "cypress": "^7.2.0",
+    "eslint": "^7.25.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.0",
     "react-test-renderer": "^17.0.2"
